# GexModDevLib

./: .clang-format  CMakeLists.txt
include/: _gmdlib_config.hpp
include/gmdlib/: graphics.hpp
include/gmdlib/common/: Span.hpp  common.hpp  err_messages.hpp
include/gmdlib/graphics/: Color.hpp  Image.hpp
include/gmdlib/graphics/gex/: BasicGraphic.hpp  BasicGraphicHeaders.hpp  BmpSegmentHeader.hpp  Graphic.hpp  GraphicCategory.hpp  GraphicInfo.hpp  PackedGraphic.hpp  PackedGraphicHeaders.hpp  PaletteBGR555.hpp  PrimaryGraphicHeader.hpp
include/gmdlib/helpers/: BinaryStreamReader.hpp  binary.hpp
include/gmdlib/scanning/: GraphicScanResults.hpp  IMemStream.hpp  LEVFileChunkMetadata.hpp  LEVScanner.hpp  LevFileChunk.hpp  MemIStream.hpp
src/graphics/: Image.cpp
src/graphics/gex/: BasicGraphic.cpp  BasicGraphicHeaders.cpp  BmpSegmentHeader.cpp  Graphic.cpp  PackedGraphic.cpp  PackedGraphicHeaders.cpp  PaletteBGR555.cpp  PrimaryGraphicHeader.cpp
src/scanning/: LEVFileChunkMetadata.cpp  LEVScanner.cpp  LevFileChunk.cpp
tests/: main.cpp
